# lit_fizz

./: .buildinfo  .doit.db.dir  .gitignore  _config.yml  _toc.yml  dodo.py  objects.inv  pyproject.toml  readme.html  readme.md  requirements.txt
.github/workflows/: docs.yml  python-package.yml
lit_fizz/: __init__.py  __main__  __main__.py  readme.md
